--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>AuthoRasa</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.google.firebase</groupId>
 			<artifactId>firebase-admin</artifactId>
-			<version>7.2.0</version>
+			<version>6.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
@@ -37,15 +37,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-undertow</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -56,4 +55,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
